# macLLM

./: .gitignore  Makefile  README.md  launch.py  macllm.py  package-lock.json  pyproject.toml  setup.py  shortcuts.py  test_plugins.py
.cursor/rules/: project-overview.mdc
config/: config.toml  default_shortcuts.toml  default_shortcuts.txt
config/skills/: shortcuts.md
install/: __init__.py  model_install.py
macllm/: __main__.py  macllm.py  shortcuts.py  ui.py  ui_autocomplete.py  ui_input_field.py  ui_main_text.py  webtools.py
macllm/agents/: __init__.py  base.py  calendar_agent.py  default.py  email_agent.py  file_agent.py  granola_agent.py  lazy_managed.py  macllm_prompt_templates.py  note_agent.py  smolagent.py  things_agent.py
macllm/core/: __init__.py  abortable_model.py  activity_trace.py  agent_service.py  agent_status.py  chat_history.py  command_parser.py  config.py  context.py  conversation_log.py  conversationlog.py  device_context.py  llm_service.py  memory.py  model_connector.py  model_paths.py  persistence.py  sandbox.py  shortcuts.py  skills.py  storage.py  task_runner.py  user_interaction.py  user_request.py  virtual_filesystem.py
macllm/markdown/: __init__.py  blocks.py  inline.py  link.py  renderer.py  spacing.py  table.py
macllm/models/: __init__.py  fake_connector.py  inception_connector.py  llm_config.py  openai_connector.py
macllm/plugins/: base.py  clipboard_plugin.py  file_plugin.py  image_plugin.py  url_plugin.py
macllm/shortcuts/: __init__.py  base.py  clipboard_plugin.py  file_plugin.py  image_plugin.py  url_plugin.py
macllm/tags/: __init__.py  agent_tag.py  base.py  clipboard_tag.py  command_tag.py  file_tag.py  image_tag.py  quit_tag.py  speed_tag.py  tool_tag.py  url_tag.py
macllm/tools/: __init__.py  _debug.py  calendar.py  clipboard.py  email.py  file.py  file_append.py  file_browse.py  file_ops.py  file_search.py  file_utils.py  file_write.py  filesystem.py  granola.py  memory.py  note.py  shell.py  skills.py  things.py  time.py  user_input.py  web_search.py
macllm/ui/: __init__.py  agent_activity.py  approval.py  autocomplete.py  core.py  (+8 more)
resources/: Info.plist
specs/: agent_status.md  agentic.md  agents.md  calendar.md  context.md  conversation.md  file_plugin.md  file_plugin.txt  filesystem.md  history.md  history.txt  llm.md  markdown.md  overview.md  overview.txt  parallel_tabs.md  plugins.txt  shell.md  shortcutrules.md  shortcutrules.txt  skills.md  tag_plugins.md  tasks.md  tools.md  ui-layout.txt  ui.md
test/: conftest.py  pbtest.py  test_instructions.txt  test_shortcuts.py  window.py
(+88 files in other folders)
