[project]
name = "macllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "certifi>=2024.12.14",
    "openai>=1.54.4",
    "pyobjc>=10.3.1",
    "pytest>=8.3.5",
    "quickmachotkey>=2023.11.17",
    "requests>=2.32.3",
]


[tool.pytest.ini_options]
addopts = "-m 'not external'"
markers = [
    "external: tests that hit external services",
]
